@@ -21,6 +21,7 @@ Current:
     - bug #40055: AVRDUDE segfaults when writing eeprom
     - bug #40085: Typo fix in fuses report (for 6.1-svn-20130917)
     - bug #40817: Elf file support (possibly) not working on 6.0.1 windows build
+    - [no-id]:    Fix handling of devices > 128 KiB in stk500v1 protocol
     - patch #7896: DFU FLIPv2 programming support
     - patch #XXXX: xxx
 
